add key on secret.yml

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,10 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  APP_KEY: "4ud27yjd4xt8ehw"
+  APP_SECRET: "xwux1rn2zyindfv"
+  #ACCESS_TOKEN: "7252_azTnGAAAAAAAAB2nCFKDoBV9gYZPpsvbXqRSrOFQrGV4HNkU8lu5fJxkdNL"
+  ACCESS_TOKEN: "ywafz953zja759kr"
+  ACCESS_TOKEN_SECRET: "i7pg7krnm1jovgf"
+  USER_ID: "263493608"
+  ACCESS_TYPE: "app_folder"
